--- a/templates/statistics.html.erb
+++ b/templates/statistics.html.erb
@@ -49,11 +49,12 @@
             </table>
           </div>
           <hr class="mb-4">
-          <a class="btn btn-primary btn-lg" href="menu.html.erb" role="button">
+          <a class="btn btn-primary btn-lg" href="/" role="button">
             Home
           </a>
         </div>
        </div>
+    </div>
     </section>
   </body>
 </html>
