--- a/templates/statistics.html.erb
+++ b/templates/statistics.html.erb
@@ -19,7 +19,7 @@
         <div class="col-12 col-md-6">
           <div class="row">
             <div class="col-md-auto">
-              <h1 class="text-white title">Codebreaker 2018</h1>
+              <h1 class="text-white title">Codebreaker 2022</h1>
             </div>
           </div>
           <p class="lead text-white-70"> Top of Players:</p>
@@ -28,7 +28,6 @@
             <table class="table table-striped table table-sm">
               <thead>
                 <tr>
-                  <th scope="col">#</th>
                   <th scope="col">Name</th>
                   <th scope="col">Level</th>
                   <th scope="col">Attempts Left</th>
@@ -37,14 +36,18 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Player 1</td>
-                  <td>Middle</td>
-                  <td>8/10</td>
-                  <td>3/3</td>
-                  <td>2018.12.04 - 17:00:01</td>
-                </tr>
+              <% if @request.session[:statistics].nil? %>
+              <% else %>
+                <%  @request.session[:statistics].each do |player| %>
+                  <tr>
+                    <td><%= player[:game].name %></td>
+                    <td><%= player[:game].difficulty %></td>
+                    <td><%= player[:game].total_attempts %>/<%= player[:game].used_attempts %></td>
+                    <td><%= player[:game].total_hints %>/<%= player[:game].used_hints %></td>
+                    <td><%= player[:date] %></td>
+                  </tr>
+                <%end %>
+              <% end %>
               </tbody>
             </table>
           </div>
