--- a/templates/game.html.erb
+++ b/templates/game.html.erb
@@ -58,7 +58,7 @@
               </div>
               <div class="form-group guess_markers_list">
                 <div id="guess_marker">
-                  <% unless @request.session[:result].nil? %>
+                  <% if @request.session.key?(:result) %>
                     <% @request.session[:result].each do |answer| %>
                       <% if answer == '+' %>
                         <button type="button" class="btn btn-success marks" disabled>+</button>
@@ -72,13 +72,12 @@
                 </div>
               </div>
               <hr class="mb-4">
-
               <button type="submit" class="btn btn-primary btn-lg">
                 Submit
               </button>
               <a class="btn btn-warning btn-lg float-right" role="button" href="/receive_hint">
                 Show hint!
-                <% unless  @request.session[:hints].nil? %>
+                <% if  @request.session.key?(:hints) %>
                   <%  @request.session[:hints].each do |hint| %>
                     <span class="badge badge-light">
                       <%=  hint %>
@@ -87,6 +86,9 @@
                 <% end %>
               </a>
             </form>
+            <a class="btn btn-danger btn-lg float-right mt-sm-5" role="button" href="/leave_game">
+              Leave Game
+            </a>
           </div>
         </div>
        </div>
