--- a/templates/menu.html.erb
+++ b/templates/menu.html.erb
@@ -18,6 +18,7 @@
             <div class="row">
               <div class="col-md-auto">
                 <h1 class="text-white title">Codebreaker 2022</h1>
+                <h4 class="lead text-white-50" style="">author Vladyslav Todorchuk (FJI)</h4>
               </div>
             </div>
             <div>
@@ -48,16 +49,10 @@
                   <option value="hell">Hell</option>
                 </select>
               </div>
-
               <hr class="mb-4">
-
-              <% if @request.session.key?(:game_obj) %>
-                <a class="btn btn-warning btn-lg" href="/game" role="button">Continue Game</a>
-              <%else %>
                 <button type="submit" class="btn btn-primary btn-lg">
                   Start the game!
                 </button>
-              <%end %>
               <span class="float-right">
                 <a class="btn btn-warning btn-lg" href="/rules" role="button">Rules</a>
                 <a class="btn btn-success btn-lg" href="/statistics" role="button">Statistics</a>
