--- a/templates/win.html.erb
+++ b/templates/win.html.erb
@@ -16,7 +16,7 @@
         <div class="col-12 col-md-6">
           <div class="row">
             <div class="col-md-auto">
-              <h1 class="text-white title inline-block">Codebreaker 2018</h1>
+              <h1 class="text-white title inline-block">Codebreaker 2022</h1>
             </div>
           </div>
           <div class="row">
@@ -53,7 +53,7 @@
             </div>
           </div>
           <hr class="mb-4">
-          <a class="btn btn-primary btn-lg" href="/" role="button">
+          <a class="btn btn-primary btn-lg" href="/play_again" role="button">
             Play again!
           </a>
           <a class="btn btn-success btn-lg float-right" href="/statistics" role="button">
