--- a/templates/game.html.erb
+++ b/templates/game.html.erb
@@ -52,7 +52,7 @@
             </div>
             <hr class="mb-4">
 
-            <form method="post" action="http://localhost:9292/submit_answer">
+            <form method="post" action="/submit_answer">
               <div class="form-group">
                 <input class="form-control guess_input" name="number" pattern="^[1-6]{4}$" placeholder="<%= @request.session.key?(:number) ? @request.session[:number] : 1234 %>" required="" autocomplete="off">
               </div>
