--- a/templates/menu.html.erb
+++ b/templates/menu.html.erb
@@ -35,7 +35,7 @@
               </p>
             </div>
             <hr class="mb-4">
-            <form method="post" action="http://localhost:9292/start_game">
+            <form method="post" action="/start_game">
               <div class="form-group">
                 <label for="player_name" class="lead label">Player's name:</label>
                 <input class="form-control" name="player_name" id="player_name" pattern="^[\w\u0400-\u04ff]{3,20}$" placeholder="Your name" autofocus="" required="">
